corrected some issues, fixed responsive 320px card alignment

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -19,6 +19,10 @@
   overflow: hidden;
   white-space: nowrap;
   margin-left: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
 .card__image {
