--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,6 +1,6 @@
 .footer {
   color: rgba(84, 84, 84, 1);
-  font-family: "Inter" sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
@@ -10,6 +10,8 @@
   padding-bottom: 60px;
   width: 100%;
   max-width: 880px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
