--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -21,7 +21,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
   .gallery {
-    margin: 36px 19px 0px 19px;
+    margin-top: 36px;
     padding: 0;
     display: flex;
   }
